<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.kmitl58070042.dnyopr.comparizon.fragment.AddItemFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp">

                <ImageView
                    android:id="@+id/btn_image"
                    android:layout_width="wrap_content"
                    android:layout_height="170dp"
                    android:layout_gravity="center"
                    android:onClick="onClick"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/add_image" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edit_brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"

                    android:hint="Product name"
                    android:inputType="textPersonName"
                    app:met_floatingLabel="normal"
                    app:met_maxCharacters="20"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edit_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Details"
                    android:inputType="textPersonName"
                    app:met_floatingLabel="normal"
                    app:met_maxCharacters="40"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/edit_size"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="Quantity"
                        android:inputType="numberDecimal"
                        app:met_floatingLabel="normal" />

                    <Space
                        android:layout_width="8dp"
                        android:layout_height="wrap_content" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edit_cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Price"
                    android:inputType="numberDecimal"
                    app:met_floatingLabel="normal" />
                </LinearLayout>

            </LinearLayout>

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"

                    android:text="save" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
