<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/btn_add"
            android:icon="@drawable/ic_add"
            android:orderInCategory="100"
            app:showAsAction="always"
            android:title="btn add"
            />

</menu>