...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/comparison_space"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="8"
                    android:background="@android:color/white">

...
                            android:layout_weight="9"
                            android:background="#FFE082"
                            android:gravity="center"
                            android:text="reslt" />

                        <ImageView
                            android:id="@+id/btn_share"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:background="#ccc"
                            android:paddingLeft="5dp"
...
